--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,32 +3,23 @@
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="assets/img/unnamed.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Marcos Ramos</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://api.whatsapp.com/send?phone=+553187752313" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
-          <a href="https://github.com/marcosramossilvatech" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/marcos-ramos-1ab3856a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
+      <app-cabecalho></app-cabecalho>
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a (click)="scrollToSection('home')" class="nav-link scrollto" [class.active]="activeSection === 'home'"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a (click)="scrollToSection('about')" class="nav-link scrollto" [class.active]="activeSection === 'about'"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a (click)="scrollToSection('resume')" class="nav-link scrollto" [class.active]="activeSection === 'resume'"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a (click)="scrollToSection('home')" class="nav-link scrollto" [class.active]="activeSection === 'home'" ><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a (click)="scrollToSection('about')" class="nav-link scrollto" [class.active]="activeSection === 'about'"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
+          <li><a (click)="scrollToSection('resume')" class="nav-link scrollto" [class.active]="activeSection === 'resume'"><i class="bx bx-file-blank"></i> <span>Experiencia profissional</span></a></li>
           <li><a (click)="scrollToSection('portfolio')" class="nav-link scrollto" [class.active]="activeSection === 'portfolio'"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a (click)="scrollToSection('services')" class="nav-link scrollto" [class.active]="activeSection === 'services'"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a (click)="scrollToSection('contact')" class="nav-link scrollto" [class.active]="activeSection === 'contact'"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a (click)="scrollToSection('contact')" class="nav-link scrollto" [class.active]="activeSection === 'contact'"><i class="bx bx-envelope"></i> <span>Contatos</span></a></li>
         </ul>
 
-      </nav><!-- .nav-menu -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>
 
   <main id="main">
+    <!-- <app-menu-lateral></app-menu-lateral> -->
     <app-hero></app-hero>
     <app-about></app-about>
     <app-facts></app-facts>
