--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -1,30 +1,26 @@
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
+<header id="header">
+  <div class="d-flex flex-column">
 
-      <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
-      <nav id="navbar" class="nav-menu navbar">
-        <!-- app.component.html -->
-        <ul>
-          <li><a (click)="scrollToSection('hero')" class="nav-link scrollto" [class.active]="activeSection === 'hero'"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a (click)="scrollToSection('about')" class="nav-link scrollto" [class.active]="activeSection === 'about'"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a (click)="scrollToSection('resume')" class="nav-link scrollto" [class.active]="activeSection === 'resume'"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a (click)="scrollToSection('portfolio')" class="nav-link scrollto" [class.active]="activeSection === 'portfolio'"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a (click)="scrollToSection('services')" class="nav-link scrollto" [class.active]="activeSection === 'services'"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a (click)="scrollToSection('contact')" class="nav-link scrollto" [class.active]="activeSection === 'contact'"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-
-      </nav><!-- .nav-menu -->
+  <div class="profile">
+    <img src="assets/img/unnamed.jpg" alt="" class="img-fluid rounded-circle">
+    <h1 class="text-light"><a href="index.html">Marcos Ramos</a></h1>
+    <div class="social-links mt-3 text-center">
+      <a href="https://api.whatsapp.com/send?phone=+553187752313" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+      <a href="https://github.com/marcosramossilvatech" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+      <a href="https://www.linkedin.com/in/marcos-ramos-1ab3856a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
     </div>
-  </header><!-- End Header -->
+  </div>
+
+  <nav id="navbar" class="nav-menu navbar">
+    <ul>
+      <li><a (click)="scrollToSection('home')" class="nav-link scrollto" [class.active]="activeSection === 'home'"><i class="bx bx-home"></i> <span>Home</span></a></li>
+      <li><a (click)="scrollToSection('about')" class="nav-link scrollto" [class.active]="activeSection === 'about'"><i class="bx bx-user"></i> <span>About</span></a></li>
+      <li><a (click)="scrollToSection('resume')" class="nav-link scrollto" [class.active]="activeSection === 'resume'"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+      <li><a (click)="scrollToSection('portfolio')" class="nav-link scrollto" [class.active]="activeSection === 'portfolio'"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+      <li><a (click)="scrollToSection('services')" class="nav-link scrollto" [class.active]="activeSection === 'services'"><i class="bx bx-server"></i> <span>Services</span></a></li>
+      <li><a (click)="scrollToSection('contact')" class="nav-link scrollto" [class.active]="activeSection === 'contact'"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+    </ul>
+
+  </nav><!-- .nav-menu -->
+  </div>
+</header><!-- End Header -->
