--- a/src/app/components/menu-toggle/menu-toggle.component.css
+++ b/src/app/components/menu-toggle/menu-toggle.component.css
@@ -1,6 +1,7 @@
 .rotate {
-  transition: transform 0.9s ease-in-out;
+  transition: transform 0.3s ease;
 }
-.rotate.active {
-  transform: rotate(3600deg);
+.rotate.bi-x {
+  transform: rotate(90deg);
 }
+
