--- a/src/app/components/menu-toggle/menu-toggle.component.html
+++ b/src/app/components/menu-toggle/menu-toggle.component.html
@@ -1,1 +1,6 @@
-<i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+<i class="bi mobile-nav-toggle d-xl-none"
+   [ngClass]="{'bi-list': !isXClass, 'bi-x': isXClass, 'rotate': isXClass}"
+   (click)="cliqueAbrirFecharMenu()"></i>
+
+
+
